methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:5: error: value avance is not a member of Unit
def growFlowers() {fleur(Color.RED);changeFleur();fleur(Color.CYAN);changeEtage();fleur(Color.ORANGE);changeEtage();fleur(Color.PINK);changeFleur();fleur(Color.GREEN);droite();avance();gauche();avance();droite();fleur(Color.BLUE);gauche();avance();gauche()avance();droite();fleur(Color.RED);changeFleur();fleur(Color.CYAN);changeEtage();fleur(Color.ORANGE);changeEtage();fleur(Color.PINK);changeFleur();fleur(Color.GREEN);}
                                                                                                                                                                                                                                                                ^